test: #124 watchstock create